# monorepo

./: .gitignore  README.md  RemoteLLM.py  __init__.py  pyproject.toml
src/monorepo/: LLM.py  Transformer.py  Transformer_old_attrs.py  __init__.py  utils.py
src/nero/: LLM.py  Transformer.py  __init__.py
