[project]
name = "monorepo"
version = "0.2.3"
description = "Deep Learning personal utilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "attrs>=25.4.0",
    "datasets>=4.4.1",
    "google-genai>=1.49.0",
    "openai>=2.7.2",
]

[dependency-groups]
dev = [
    "torch",
    "torchvision",
]

