[project]
name = "monorepo"
version = "0.3.0"
description = "Deep Learning personal utilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "attrs>=25.4.0",
    "colorama>=0.4.6",
    "datasets>=4.4.1",
    "google-genai>=1.49.0",
    "openai>=2.7.2",
    "huggingface_hub"
]

[project.optional-dependencies]
vllm = [
    "vllm>=0.12.0",
]

[dependency-groups]
dev = [
    "torch",
    "torchvision",
]

